  - dsdiff, dsf: report bit rate
  - dsdiff, dsf: implement seeking
  - dsf: support DSD512
  - dsf: support multi-channel files
  - dsf: fix big-endian bugs
  - dsf: fix noise at end of malformed file
  - sndfile: support scanning remote files
  - sndfile: support tags "comment", "album", "track", "genre"
  - mp4v2: support playback of MP4 files.
* encoder:
  - shine: new encoder plugin
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* configuration
  - allow playlist directory without music directory
  - use XDG to auto-detect "music_directory" and "db_file"
* new resampler option using libsoxr
* ARM NEON optimizations
* install systemd unit for socket activation
* Android port

ver 0.18.13 (not yet released)
* decoder
  - dsdiff, dsf: fix endless loop on malformed file
  - ffmpeg: support ffmpeg/libav version 11
* fix state file saver
* fix build failure on Darwin

ver 0.18.12 (2014/07/30)
* database
  - proxy: fix build failure with libmpdclient 2.2
  - proxy: fix add/search and other commands with libmpdclient < 2.9
* decoder
  - audiofile: improve responsiveness
  - audiofile: fix WAV stream playback
  - dsdiff, dsf: fix stream playback
  - dsdiff: fix metadata parser bug (uninitialized variables)
  - faad: estimate song duration for remote files
  - sndfile: improve responsiveness
* randomize next song when enabling "random" mode while not playing
* randomize next song when adding to single-song queue

ver 0.18.11 (2014/05/12)
* decoder
  - opus: fix missing song length on high-latency files
* fix race condition when using GLib event loop (non-Linux)

ver 0.18.10 (2014/04/10)
* decoder
  - ffmpeg: fix seeking bug
  - ffmpeg: handle unknown stream start time
  - gme: fix memory leak
  - sndfile: work around libsndfile bug on partial read
* don't interrupt playback when current song gets deleted

ver 0.18.9 (2014/03/02)